--- a/index.html
+++ b/index.html
@@ -1,48 +1,77 @@
-<!DOCTYPE html>
-<html>
+{ "files.autoSave": "off" }
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>COVERSHARKS</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="nav-logo">
-                <img class="nav-logo" style="float-left" src="./assets/logo-color.svg" alt="Main logo-blue">
-            </div>
-            <div>
-                <ul class="navbar">
-                    <li>HOW TO PLAY</li>
-                    <li>ABOUT</li>
-                    <li>PROMOTIONS</li>
-                    <img class="nav-logo-rgt" src="./assets/twitter-grey.svg" alt="twitter logo">
-                    <img class="nav-logo-rgt" src="./assets/fb-grey.svg" alt="facebook logo">
-                </ul>
-            </div>
+
+    <nav>
+        <!--  <div class="navbar1">-->
+        <img class="nav-logo" style="float-left" src="./assets/logo-color.svg" alt="Main logo-blue">
+        <!--  </div>-->
+        <ul class="navbar">
+            <li><a href="#how-to-play">HOW TO PLAY</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#promotions">PROMOTIONS</a></li>
+
+            <!--  <div class="social-media-logo" style="background-color: grey;">-->
+            <img class="nav-logo-rgt" src="./assets/twitter-grey.svg" alt="twitter logo">
+            <img class="nav-logo-rgt" src="./assets/fb-grey.svg" alt="facebook logo">
+            <!--  </div>-->
+
+        </ul>
         </div>
     </nav>
 
-    <div class="container2">
-        <div class="row1">
-            <div class=".col-md-6">
-                <p>ARE YOU IN?</p>
-                <P>Data analytics, skill, and strategy. All in the <wbr> ultimate in-game experience. CoverSharks is <wbr> primed to be the industry pioneer in a new<wbr> genre of pame play... Team Fantasy Sports.</p>
+    <section>
+
+        <div class="container-fluid" id="firstdiv">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="blue-banner">ARE YOU IN?</div>
+                    <div class="paragraph">Data analytics, skill, and strategy. All in the <br> ultimate in-game experience. CoverSharks is <br> primed to be the industry pioneer in a new<br> genre of pame play... Team Fantasy Sports.</div>
+                    <div>
+                        <button type="button" class="btn btn-default btn-lg">MORE INFO</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img class="hero-phone" src="./assets/hero-phone.png" alt="hero phone">
+                </div>
             </div>
         </div>
-    </div>
+
+        <div class="container-fluid" id="secdiv">
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="yeti" src="./assets/apple-watch-and-yeti-image.png" alt="Apple Watch and Yeti Cooler">
+                </div>
+                <div class="col-md-6">
+                    <div class="parrafo2">
+                        <div class="secdiv">REGISTER NOW FOR A CHANCE TO WIN A</div>
+                        <div class="secdiv2">FREE YETI COOLER<br> or APPLE WATCH</div>
+                        <button type="button class= " btn-lg "  ">REGISTER</button>
+                    </div>
+                </div>
+            </div>
+
+    </section>
 
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js "></script>
 
-    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
 </body>
 
 
-</html>
+
+</body>
