--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-{ "files.autoSave": "off" }
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
+
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>COVERSHARKS</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,800" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -14,32 +20,35 @@
 <body>
 
     <nav>
-        <!--  <div class="navbar1">-->
-        <img class="nav-logo" style="float-left" src="./assets/logo-color.svg" alt="Main logo-blue">
-        <!--  </div>-->
-        <ul class="navbar">
-            <li><a href="#how-to-play">HOW TO PLAY</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#promotions">PROMOTIONS</a></li>
+        <!--  <div> -->
+        <div style="display: inline">
+            <img class="nav-logo" style="float-left" src="./assets/logo-color.svg" alt="Main logo-blue">
 
-            <!--  <div class="social-media-logo" style="background-color: grey;">-->
-            <img class="nav-logo-rgt" src="./assets/twitter-grey.svg" alt="twitter logo">
-            <img class="nav-logo-rgt" src="./assets/fb-grey.svg" alt="facebook logo">
-            <!--  </div>-->
 
-        </ul>
+            <div class="socialmedia">
+                <img class="nav-logo-rgt" id="twitter" src="./assets/twitter-grey.svg" alt="twitter logo">
+                <img class="nav-logo-rgt" id="facebook" src="./assets/fb-grey.svg" alt="facebook logo">
+
+                <ul>
+                    <li><a href="#promotions">PROMOTIONS</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#how-to-play">HOW TO PLAY</a></li>
+                </ul>
+            </div>
+
         </div>
+        <!-- </div>  -->
     </nav>
 
     <section>
 
         <div class="container-fluid" id="firstdiv">
-            <div class="row">
+            <div class="row" id="secbg">
                 <div class="col-md-6">
                     <div class="blue-banner">ARE YOU IN?</div>
-                    <div class="paragraph">Data analytics, skill, and strategy. All in the <br> ultimate in-game experience. CoverSharks is <br> primed to be the industry pioneer in a new<br> genre of pame play... Team Fantasy Sports.</div>
+                    <div class="paragraph">Data analytics, skill, and strategy. All in the <br> ultimate in-game experience. CoverSharks is <br> primed to be the industry pioneer in a new<br> genre of game play...Team Fantasy Sports.</div>
                     <div>
-                        <button type="button" class="btn btn-default btn-lg">MORE INFO</button>
+                        <button type="button" id="sec1btn" class="btn btn-default btn-lg">MORE INFO</button>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -57,21 +66,112 @@
                     <div class="parrafo2">
                         <div class="secdiv">REGISTER NOW FOR A CHANCE TO WIN A</div>
                         <div class="secdiv2">FREE YETI COOLER<br> or APPLE WATCH</div>
-                        <button type="button class= " btn-lg "  ">REGISTER</button>
+                        <button type="button" class="btn-lg">REGISTER</button>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container-fluid" id="thrirddiv">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="blue-paragraph">Choose How You<br> Want to Play.</div>
+                    <div class="thrsecparagraph">Do you want to complete alongside your favorite <br>teams? Do you follow the entire nation or a <br>specific conference or region of the country?<br> CoverSharks gives you the option to customize<br>your play with our unique format
+                        of games that<br>suits your personal preferences.</div>
+                    <div>
+                        <button type="button" class="btn btn-default btn-lg">HOW TO PLAY</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img class="tilted-phone" src="./assets/tilted-phone.png" alt="tilted-phone">
+                </div>
+            </div>
+        </div>
 
+        <div class="container-fluid" id="sec4">
+            <div class="row">
+                <h1 class="text-center" id="sec4p">OVERVIEW OF GAME PLAY</h1>
+                <div class="col-md-4">
+                    <div class="well well-lg">
+                        <img class="app-image" src="./assets/app-image-1-01.png" alt="app image">
+                        <p>In-Game Experience</p>
+                        <p>Scores of each game are updated<br> in real-time to offer players<br>the ultimate in-Game experi-ence.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="well well-lg">
+                        <img class="app-image" src="./assets/app-image-2-04.png" alt="app image">
+                        <p>Data and Analytics</p>
+                        <p>As an integral part of gme play,<br>CoverSharks offers players a<br> wide variety of real-time data<br>and analytics.</p>
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="well well-lg">
+                        <img class="app-image" src="./assets/app-image-3-05.png">
+                        <p>Skill and Strategy</p>
+                        <p>Game odds are updated daily in <br>real-time giving players an <br> added level of skill and strategy.
+
+                    </div>
+                </div>
+            </div>
+            <div>
+                <p class="text-center" id="sec4p2">Enter your email for more information and updates about CoverSharks</p>
+            </div>
+            <div>
+                <button type="button" class="btn btn-default btn-lg btn-block">Email</button>
+                <button type="button" id="sec4btn" class="btn btn-primary btn-lg">SUBSCRIBE</button>
+            </div>
+        </div>
     </section>
 
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4" id="footer-socialmedia">
+                    <img class="coversharks-bluelogo" src="./assets/logo-blue.svg">
+                    <br>
+                    <img class="facebook-footer" src="./assets/fb-blue.svg">
+                    <img class="twitter-footer" src="./assets/twitter-blue.svg">
+                </div>
+
+                <div class="col-md-4">
+
+                    <table rules="cols">
+
+                        <tr>
+                            <td>HOW TO PLAY</td>
+                            <td>PROMOTIONS</td>
+                        </tr>
+                        <tr>
+                            <td>ABOUT</td>
+                            <td>VIDEOS</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class=" col-md-4 ">
+                    <button type="button " class="btn btn-sucess btn-lg ">CONTACT</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid ">
+            <div class="row ">
+                <div class="pull-left ">
+                    <div> COVERSHARKS LLC</div>
+                </div>
+                <div class="pull-right ">
+                    <div>POWERED BY PLATYPI</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js "></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js "></script>
+
+
 
 </body>
-</body>
 
-
-
-</body>
+</html>
