add message for debugging on index page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 </head>
 
 <body>
-<!--make a change-->
+    <!--make a change-->
     <nav>
         <!--  <div> -->
+        <div>
+            <p>Explanation of what this section is for debugging</p>
+        </div>
         <div style="display: inline">
             <img class="nav-logo" style="float-left" src="./assets/logo-color.svg" alt="Main logo-blue">
 
